# wesnoth

./: CMakeLists.txt  CMakeSettings.json  vcpkg.json
data/: _main.cfg
data/ai/lua/: ai_helper.lua
data/campaigns/Delfadors_Memoirs/sounds/: rumble.aac
data/campaigns/Eastern_Invasion/sounds/: gate-fall.aac
data/campaigns/The_Hammer_of_Thursagan/sounds/: unlock.aac
data/campaigns/The_Rise_Of_Wesnoth/sounds/: familiar-teeth.aac
data/campaigns/Under_the_Burning_Suns/sounds/: tauroch-hit-1.aac  tauroch-hit-2.aac  tauroch-hit-3.aac
data/campaigns/World_Conquest/sounds/: witches-laugh.aac
data/core/music/: battle-epic.aac  battle.aac  breaking_the_chains.aac  casualties_of_war.aac  defeat.aac  defeat2.aac  elf-land.aac  elvish-theme.aac  frantic-old.aac  frantic.aac  heroes_rite.aac  into_the_shadows.aac  journeys_end.aac  knalgan_theme.aac  knolls.aac  legends_of_the_north.aac  love_theme.aac  loyalists.aac  main_menu.aac  northern_mountains.aac  northerners.aac  nunc_dimittis.aac  return_to_wesnoth.aac  revelation.aac  sad.aac  siege_of_laurelmor.aac  silence.aac  silvan_sanctuary.aac  suspense.aac  the_city_falls.aac  the_dangerous_symphony.aac  the_deep_path.aac  the_king_is_dead.aac  transience.aac  traveling_minstrels.aac  underground.aac  vengeful.aac  victory.aac  victory2.aac  wanderer.aac  (+1 more)
data/core/sounds/: axe.aac  bat-flapping.aac  bat-hit-1.aac  bat-hit-2.aac  bat-hit-3.aac  bat-hit-4.aac  bite-small.aac  bite.aac  bow-miss.aac  bow-puny-fire-miss.aac  bow-puny-fire.aac  bow-puny-miss.aac  bow-puny.aac  bow.aac  cave-in.aac  claws.aac  club-miss.aac  club.aac  crossbow-fire-miss.aac  crossbow-fire.aac  crossbow-miss.aac  crossbow.aac  dagger-swish.aac  dart.aac  dragonstick-miss.aac  dragonstick.aac  drake-die.aac  drake-hit-1.aac  drake-hit-2.aac  drake-hit-3.aac  dwarf-die-1.aac  dwarf-die-2.aac  dwarf-die-3.aac  dwarf-hit-1.aac  dwarf-hit-2.aac  dwarf-hit-3.aac  dwarf-hit-4.aac  dwarf-laugh.aac  elf-hit-1.aac  elf-hit-2.aac  (+212 more)
data/core/sounds/ambient/: birds1.aac  birds2.aac  birds3.aac  campfire.aac  morning.aac  night.aac  ship.aac  wardrums.aac
data/core/sounds/horn-signals/: horn-1.aac  horn-2.aac  horn-3.aac  horn-4.aac  horn-5.aac  horn-6.aac  horn-7.aac  horn-8.aac
data/lua/: location_set.lua
packaging/macos/: wesnoth.plist
packaging/windows/: wesnoth.exe.manifest
po/wesnoth-nr/: CMakeLists.txt
po/wesnoth-wc/: CMakeLists.txt
sounds/: arrive.aac  bell.aac  chat-1.aac  chat-2.aac  chat-3.aac  chat-friend.aac  chat-highlight.aac  checkbox.aac  expand.aac  gamestart.aac  join.aac  leave.aac  receive.aac  select-unit.aac  select.aac  slider.aac  timer.aac
source_lists/: libwesnoth_core  lua  wesnoth
src/: CMakeLists.txt  build_info.cpp  build_info.hpp  color.hpp  commandline_argv.cpp  commandline_options.cpp  config.cpp  config.hpp  config_cache.cpp  controller_base.cpp  cursor.cpp  display.cpp  events.cpp  filesystem.cpp  filesystem.hpp  filesystem_common.cpp  filesystem_sdl.cpp  game_launcher.cpp  gettext.cpp  gettext.hpp  global.hpp  hash.cpp  language.cpp  lexical_cast.hpp  log.cpp  lua_jailbreak_exception.cpp  lua_jailbreak_exception.hpp  network_asio.cpp  network_asio.hpp  picture.cpp  quit_confirmation.cpp  random.cpp  save_index.cpp  saved_game.cpp  savegame.cpp  seed_rng.cpp  sound.cpp  sound_music_track.cpp  tls_root_store.cpp  tls_root_store.hpp  (+4 more)
src/addon/: info.cpp
src/desktop/: battery_info.cpp  notifications.cpp  open.cpp  open.hpp  paths.cpp  version.cpp
src/font/: font_config.cpp  text.cpp  text.hpp
src/font/pango/: font.hpp  stream_ops.hpp
src/gui/core/event/: handler.cpp
src/gui/dialogs/: game_version_dialog.cpp  game_version_dialog.hpp  loading_screen.cpp  loading_screen.hpp  screenshot_notification.cpp  title_screen.cpp
src/gui/widgets/: helper.hpp
src/lua/: loslib.cpp  lprefix.h  luaconf.h  utf8_prefix.h
src/preferences/: credentials.cpp  display.cpp  game.cpp  general.cpp
src/scripting/: lua_kernel_base.cpp  lua_wml.cpp
src/serialization/: binary_or_text.cpp  parser.cpp
src/server/campaignd/: fs_commit.cpp
src/server/common/: simple_wml.cpp
src/tests/utils/: wml_equivalence.cpp
src/widgets/: textbox.cpp
